Enhance installation and setup scripts; add local development configurations and folder scanning utilities for .nd files

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,9 @@ next-env.d.ts
 # firebase
 firebase-debug.log
 firestore-debug.log
+# Snyk Security Extension - AI Rules (auto-generated)
+.github\instructions\snyk_rules.instructions.md
+
+# Local development environment
+venv/
+.venv/
